custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/PolymorphicLookupObject__mdt.object-meta.xml
<CustomObject>
    <description>PolymorphicLookupObject Custom Metadata records holds the sObjects and their details which are used to enable dynamic polymorphic Looup fields.</description>
    <label>Polymorphic Lookup Object</label>
    <pluralLabel>Polymorphic Lookup Objects</pluralLabel>
</CustomObject>