custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/fields/IsCreateNewRecordAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsCreateNewRecordAllowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is a boolean checkbox to allow or restrict creation of new records. Default is True means New Record is allowed to create.However even if this checkboc is true an duser doesnt have create permssion they will not be able to create New Records</description>
    <label>IsCreateNewRecordAllowed</label>
    <type>Checkbox</type>
</CustomField>