custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/fields/sObject_Display_IconName__c.field-meta.xml
<CustomField>
    <fullName>sObject_Display_IconName__c</fullName>
    <label>sObject Display IconName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>