custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/fields/sObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>sObjectAPIName__c</fullName>
    <description>This field holds the API Name of the sObject</description>
    <label>sObjectAPIName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>