custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/fields/sObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>sObjectLabel__c</fullName>
    <description>This field holds the Label of sObject</description>
    <label>sObjectLabel</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>