custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/fields/sObjectLookup_subtitle_field__c.field-meta.xml
<CustomField>
    <fullName>sObjectLookup_subtitle_field__c</fullName>
    <label>sObjectLookup Subtitle field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>