custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/fields/sObjectPluralName__c.field-meta.xml
<CustomField>
    <fullName>sObjectPluralName__c</fullName>
    <description>This field holds the sObjects Plural Name</description>
    <label>sObjectPluralName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>