custom Polymorphic Lookup field/objects/PolymorphicLookupObject__mdt/fields/sObjectRecords_Search_by_field__c.field-meta.xml
<CustomField>
    <fullName>sObjectRecords_Search_by_field__c</fullName>
    <label>sObjectRecords Search by field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>